@startuml

class MonoBehaviour #LightPink

class Enums #LightBlue
{
    + Idle;
    + IsWalking;
}

class PlayerMove #LightYellow
{
    + OnAnimationStateChanged
    + OnPlayerInputMove
    - Awake();
    - Update();
    - Movment():
}

class PlayerAnimation 
{
    - Awake();
    * OnEnable(): Listener;
    - OnDiseable();
    - Start();
    - UpdateAnimation();
}

class DogMovement #LightYellow
{
    + OnAnimationStateChanged;
    - Awake();
    - Update();
    - MovdeDog();
    - CheckingDogVelocity();
}

class DogAnimation
{
    - Awake();
    * OnEnable(): Listener;
    - OnDiseable();
    - UpDateDogAnimation();|
}

class CameraFollow #LightGreen
{
    - Awake();
    - OnEnable(): Listener;
    - OnDisable();
    - LateUpdate();
    - HandleCameraAndInputPlayer();
}



PlayerMove --|> MonoBehaviour
PlayerAnimation --|> MonoBehaviour
DogMovement --|> MonoBehaviour
DogAnimation --|> MonoBehaviour
CameraFollow --|> MonoBehaviour

PlayerMove --> Enums
PlayerAnimation --> Enums
DogMovement --> Enums
DogAnimation --> Enums

PlayerMove --> PlayerAnimation : Event
PlayerMove --> CameraFollow : Event
DogMovement --> DogAnimation : Event


@enduml
